[package]
name = "src-experiment"
version = "0.1.0"
authors = ["Kenneth Bogner <kenneth.bogner@testdouble.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
regex = "1.5"

[[bin]]
name = "src-experiment"
path = "main.rs"
